@@ -890,7 +890,8 @@ Inserts a file into the current buffer (or into a new buffer when multibuffer
 is enabled).
 
 @item whereis
-Searches for text in the current buffer.
+Searches for text in the current buffer -- or for filenames matching
+a string in the current list in the file browser
 
 @item searchagain
 Repeats the last search command.
@@ -987,6 +988,9 @@ Goes to the last line of the file.
 @item gotoline
 Goes to a specific line (and column if specified).
 
+@item gototext
+Switches from targetting a line number to searching for text.
+
 @item findbracket
 Moves the cursor to the bracket (brace, parenthesis, etc.) that matches
 (pairs) with the one under the cursor.
@@ -1046,8 +1050,9 @@ Toggles between searching for something and replacing something.
 @item flipexecute
 Toggles between inserting a file and executing a command.
 
-@item gototext
-Searches for files matching a string in the file browser (reading or writing files).
+@item flipnewbuffer
+Toggles between inserting into the current buffer and into a new
+empty buffer.
 
 @item dosformat
 When writing a file, switches to writing a DOS format (CR/LF).
@@ -1063,6 +1068,13 @@ When writing a file, 'prepends' (writes at the beginning) instead of overwriting
 
 @item backup
 When writing a file, creates a backup of the current file.
+
+@item tofiles
+Starts the file browser, allowing to select a file from a list.
+
+@item gotodir
+Goes to a directory to be specified, allowing to browse anywhere
+in the filesystem.
 
 @item firstfile
 Goes to the first file when using the file browser (reading or writing files).
