@@ -4,6 +4,10 @@
 	* src/proto.h, src/global.c, src/search.c: Rename 'no_replace_void()'
 	to 'flip_replace_void()', to show what it actually does.
 	* doc/man/nanorc.5, doc/texinfo/nano.texi: Update the docs for that.
+	* src/global.c (strtosc): Add the bindable function 'gotodir'.
+	* doc/man/nanorc.5, doc/texinfo/nano.texi: Document the bindable
+	functions 'tofiles','gotodir' and 'flipnewbuffer', and correct
+	the description of 'gototext' (not being about the file browser).
 
 2014-06-22  Benno Schulenberg  <bensberg@justemail.net>
 	* src/browser.c (parse_browser_input), src/help.c (parse_help_input):
